* #609: New system tables not being created when updating the system module
* #611: Mimetypes are now properly inserted to the table when updating the system module
* #301: editors: FCKeditor is default, but works not. (stranger)
* #605: Enable installation of Protector module during install wizard. (stranger)
* #602: invite.php without captcha = could lead to a security problem. (stranger)

===2009-05-05 : 1.2 Alpha===

'''Added'''
* meta_description & meta_keywords to content manager pages. (vaughan)
* seo URL in content manager changed from underscore to hyphen. (vaughan)
* extra parameter in uploader class setPrefix function to select whether a unique filename is created or whether just to add a prefix. (vaughan)
* Purifier Filters for GoogleVideo & Local Flash movies (movies that are stored locally on the same server as the site). (vaughan)
* TextSanitizer to admin users edit form, for sanitizing signature field when HTML is allowed. (vaughan)
* choice of xoopsFormTextArea or xoopsFormDHTMLTextArea to edit user form (signature) depends on whether HTML sig is allowed or not. (vaughan)
* Implementing SimplePie as a new library and IcmsSimpleRss extending it for ImpressCMS. (malanciault)
* Implementing IcmsPersistableSingleView which provides an easy way to quickly display a single object information. (malanciault)
* Implementing IcmsPersistableTreeTable extending IcmsPersistableTable with the concept of nested objects. (malanciault)
* Implementing SimplePie as admin RSS. (stranger)
* Implementing icmsstopspammer to stop spammers. (stranger)
* smarty to change a theme&template between RTL and LTR. (stranger)
* smarty <{$smarty.const._GLOBAL_LEFT}> for templates. (stranger)
* smarty <{$smarty.const._GLOBAL_RIGHT}> for templates. (stranger)
* TinyMCE plugin icmsmlcontent. (stranger)
* Issues with ICMS Captcha Class. (stranger)
* New preferences category for captcha. (stranger)
* New preferences category for plugins. (stranger)