@@ -45,6 +45,7 @@
 * #301: editors: FCKeditor is default, but works not. (stranger)
 * #605: Enable installation of Protector module during install wizard. (stranger)
 * #602: invite.php without captcha = could lead to a security problem. (stranger)
+* #610: Multilanguage support for timestamp. (mcdonald/stranger)
 
 ===2009-05-05 : 1.2 Alpha===
 
